# CHIP8

./: README.md  build.sh
chip8-assembler/: Cargo.toml
chip8-assembler/src/: main.rs
chip8-assembler/src/lib/: directives.rs  instructions.rs  misc.rs  mod.rs  parse_utils.rs
chip8-decompiler/: Cargo.toml
chip8-decompiler/src/: main.rs
chip8-interpreter/: Cargo.toml
chip8-interpreter/src/: main.rs
chip8-interpreter/src/lib/: mod.rs
examples/asm/: draw_numbers.asm
