[package]
name = "chip8-interpreter"
version = "0.1.0"
authors = ["Cyber Gsus <cyber.gsuscode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.101.0"
structopt = { version = "0.3", default-features = false }

[lib]
name = "chip8_interpreter"
path = "src/lib/mod.rs"